5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1872.log
== TEST (2019-05-01 18:32:41) 
-- CODE:
x=float(input(" valor de x: "))
y=float(input(" valor de y: "))

if(x>0)and(y>0):
	print("Q1")
else(x>0)and(y<0):
	print("Q4")
else(x<0)and(y<0):
	print("Q3")
else(x<0)and(y>0):
	print("Q2")
else(x==0)and(y!=0):
	print("Eixo Y")
else(x!=0)and(y==0):
	print("Eixo X")
else(x==0)and(y==0):
	print("Origem")


-- ERROR:
File "XXXX", line 6
    else(x>0)and(y<0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:34:05) 
-- CODE:
x=float(input(" valor de x: "))
y=float(input(" valor de y: "))

if(x>0)and(y>0):
	print("Q1")
elif(x>0)and(y<0):
	print("Q4")
elif(x<0)and(y<0):
	print("Q3")
elif(x<0)and(y>0):
	print("Q2")
elif(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")


-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:34:29) 
-- CODE:
x=float(input(" valor de x: "))
y=float(input(" valor de y: "))

if(x>0)and(y>0):
	print("Q1")
elif(x>0)and(y<0):
	print("Q4")
elif(x<0)and(y<0):
	print("Q3")
elif(x<0)and(y>0):
	print("Q2")
elif(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")


-- EXECUTION TIME:
0.191392
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
